# Uplay-Emulator

./: .gitignore  Uplay_r1_loader.sln
Uplay_r1_loader/: Consts.hpp  EUplayConfigHolder.hpp  EUplayConfigSingleton.hpp  EUplaySave.hpp  EUplaySaveStorage.hpp  EUplaySaveStorageSingleton.hpp  Hooks.hpp  Orbit.json  Patches.hpp  Uplay.json  UplayConfigHolder.hpp  UplayConfigSingleton.hpp  UplaySaveInternal.hpp  UplaySaveStorageInternal.hpp  UplaySaveStorageSingleton.hpp  Uplay_r1_loader.cpp  Uplay_r1_loader.vcxproj  Uplay_r1_loader.vcxproj.filters  cpp.hint  dllmain.cpp  stdafx.h
Uplay_r1_loader/JsonObjects/: Generators.hpp  Profile.hpp  Uplay.hpp  UplayConfig.hpp  UplaySaveMetaDataStorage.hpp  helper.hpp
Uplay_r1_loader/JsonTypes/: Profile.hpp  UplaySaveMetaDataStorage.hpp  helper.hpp
Uplay_r1_loader/Memory/: AobScan.hpp  Inject.hpp  Utils.hpp
Uplay_r1_loader/UplayExports/: UplayAch.hpp  UplayAchImpl.hpp  UplayAchievements.hpp  UplayAvatar.hpp  UplayAvatarImpl.hpp  UplayCommon.hpp  UplayCommonImpl.hpp  UplayFriends.hpp  UplayFriendsImpl.hpp  UplayInstaller.hpp  UplayInstallerImpl.hpp  UplayMetaData.hpp  UplayMetaDataImpl.hpp  UplayOptions.hpp  UplayOverlay.hpp  UplayOverlayImpl.hpp  UplayParty.hpp  UplayPartyImpl.hpp  UplaySave.hpp  (+6 more)
project/: CMakeLists.txt  Uplay.json  build.py
project/src/: Loader.hpp  dllmain.cpp
project/src/Exports/: UplayAch.hpp  UplayAvatar.hpp  UplayCommon.hpp  UplayFriends.hpp  UplayInstaller.hpp  UplayMetaData.hpp  UplayOptions.hpp  UplayOverlay.hpp  UplayParty.hpp  UplayPresence.hpp  UplaySave.hpp  UplayUser.hpp  UplayWin.hpp
project/src/Helpers/: Failure.hpp  Json.hpp  Saves.hpp
project/src/Objects/: UplayConfig.hpp
project/src/Types/: UplayOverlapped.hpp  UplaySave.hpp
project/src/Uplay/: OpenOptionsManager.hpp
project/src/Utils/: Singleton.hpp
(+4 files in other folders)
